--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.21.2",
     "joi": "^17.13.3",
-    "mongoose": "^8.9.2"
+    "mongoose": "^8.9.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.7",
